--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,24 @@
+body{
+background-image: url(../img/neve-hero-2.png);
+background-size: 100%;
+padding: 5%;
+text-align: center;
+background-color: aqua;
+
+
+}
+
 h2{
-   text-align: center;
-   font-family: 'Times New Roman', Times, serif;
-   color: aliceblue;
-   padding: 5%;
+
+    text-align: center;
+    color: aliceblue;
+    
+}
+
+
+.texto{
+text-align: center;
+color: aliceblue;
+
 }
 
