--- a/teste.css
+++ b/teste.css
@@ -1,13 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+
+
 body {
-    min-height: 100vh;
+    box-sizing: border-box;
     background-color: blue;
-    background-image: url(./img/neve-hero-2.png);
     background-repeat: no-repeat;
-    padding-top: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 5%;
-    margin-right: 5%;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    min-height: 100vh;
 }
 
 .sub {
