--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 body {
     background-color: blue;
-    background-image: url(./img/neve-hero-2.png);
+    background-image: url(../img/neve-hero-2.png);
     background-repeat: no-repeat;
     background-size: cover;
     justify-content: center;
@@ -44,3 +44,12 @@ body {
             color: red;
             
             }       
+
+            img {
+             width: 50px;
+             height: 50px;
+            }
+
+            img, p {
+                float:left;
+            }
