--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,7 +15,7 @@ body {
     text-align: center;
     align-items: center;
     color: aliceblue;
-    margin-top: 0;
+    margin-top: 2px;
     margin-bottom: 0;
 }
 
