--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 body {
     background-color: blue;
-    background-image: url(../img/neve-hero-2.png);
+    background-image: url(../img/gradient_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     justify-content: center;
@@ -11,7 +11,6 @@ body {
 }
 
 .sub {
-
     text-align: center;
     align-items: center;
     color: aliceblue;
@@ -21,7 +20,6 @@ body {
 
 .form {
     text-align: center;
-
 }
 
 .inputs {
@@ -31,6 +29,8 @@ body {
     font-size: 14px;
     padding-top: 2px;
     padding-bottom: 5px;
+   
+   
     }
 
     .resposta {
