--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
+    background-color: rgb(4, 4, 150);
     background-image: url(../img/gradient_2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
