--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,8 +14,9 @@ body {
     text-align: center;
     align-items: center;
     color: aliceblue;
-    margin-top: 2px;
+    margin-top: 0px;
     margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .form {
@@ -27,7 +28,7 @@ body {
     width: 200px;
     text-align: center;
     font-size: 14px;
-    padding-top: 2px;
+    padding-top: 0;
     padding-bottom: 5px;
    
    
@@ -46,13 +47,13 @@ body {
             }       
 
             img {
+            margin-top: 2%;
+            margin-bottom: 0;
              width: 50px;
              height: 50px;
             }
 
-            img, p {
-                float:left;
-            }
+           
 
             #enviar {
                 background-color: green;
@@ -60,6 +61,7 @@ body {
                 font-weight: bolder;
                 height: 30px;
                 border-radius: 15px;
+                margin-top: 5%;
             }
 
             .valor{
