--- a/css/admin.css
+++ b/css/admin.css
@@ -1,34 +1,42 @@
+@media only screen and (min-width: 1200px) {
+    body {
+        background-color: rgb(0, 0, 180);
+        background-image: url(../img/gradient_2.jpg);
+        align-content: center;
+        color: white;
+        text-align: center;
+    
+    }   
 
+    .divi-img {
+        text-align: center;     
+    }
 
+    .img{
+        width: 100px;
+        height: 100px;
+    }
 
+    .titulo {
+        text-align: center;
+        font-size: 18px;
+    }
 
-body {
-    background-color: rgb(0, 0, 180);
-    background-image: url(../img/gradient_2.jpg);
-    align-content: center;
-    color: white;
-    text-align: center;
+    .form{
+        align-content: cover;
 
-}
-h1 {
+    }
 
-    align-content: center;
+    .inputs {
+        width: 50px;
+        font-size: 18px;
+    }
 
-}
+    .respostas {
+        width: 180px;
+        font-size: 18px;
+    }
 
-#funcao {
-    align-items: center;
-}
-
-tr {
-    align-content: center;
-}
-.respostas {
-
-    width: 200px;
-}
-
-inputs {
-    align-content: center;
-    text-align: center;
-}
+  }
+  
+  
