--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,76 +1,185 @@
-body {
-    background-color: rgb(4, 4, 150);
-    background-image: url(../img/gradient_2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    justify-content: center;
-    padding: 2px;
-    min-height: 90vh;
-    margin: 0;
-    color: aliceblue;
-}
 
-.sub {
-    text-align: center;
-    align-items: center;
-    color: aliceblue;
-    margin-top: 0px;
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
 
-.form {
-    text-align: center;
-}
 
-.tabela {
-    text-align: center;
-    align-content: center;
-}
+@media only screen and (min-width: 300px) and (max-device-width: 768px){
 
-.inputs {
-    border-radius: 3%;
-    width: 200px;
-    text-align: center;
-    font-size: 14px;
-    padding-top: 0;
-    padding-bottom: 5px;
-   
-   
+    body {
+        background-color: rgb(4, 4, 150);
+        background-image: url(../img/gradient_2.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        justify-content: center;
+        padding: 2px;
+        min-height: 99vh;
+        margin: 0;
+        color: aliceblue;
+    }
+
+
+    .logo {
+        margin-top: 5%;
+        width: 30%;
+        height: 30%;
+        align-content: center;
+        padding: 3%;
+       }
+
+    .divsub {
+        text-align: center;
+        align-content: center;
+
+    }   
+
+    .sub {
+        text-align: center;
+        align-items: center;
+        color: aliceblue;
+        margin-top: 0px;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+
+    p {
+        text-align: center;
+        font-size: 14px;
+    }
+
+    .inputs {
+        border-radius: 3%;
+        width: 200px;
+        text-align: center;
+        font-size: 14px;
+        padding-top: 0;
+        padding-bottom: 5px;
+
     }
 
     .resposta {
-
+    
         color:chartreuse;
-        
-        }
-
-        #button {
-            height: 30px;
-            color: red;
             
-            }       
+     }
 
-            img {
-            margin-top: 2%;
-            margin-bottom: 0;
-             width: 50px;
-             height: 50px;
-            }
+     #button {
+        height: 30px;
+        color: red;
+                
+     }       
+    
+    img {
+        margin-top: 2%;
+        margin-bottom: 0;
+        width: 50px;
+        height: 50px;
+    }
+    
+               
+    
+    #enviar {
+        background-color: green;
+        color: white;
+        font-weight: bolder;
+        height: 30px;
+        border-radius: 15px;
+        margin-top: 5%;
+    }
+    
+    .valor{
+    text-align: center;
+    width: 50px;
+    
+    }
 
-           
+}
 
-            #enviar {
-                background-color: green;
-                color: white;
-                font-weight: bolder;
-                height: 30px;
-                border-radius: 15px;
-                margin-top: 5%;
-            }
+@media only screen and (min-width: 768px) and (max-device-width: 1200px) {
+    body {
+        background-color: rgb(4, 4, 150);
+        background-image: url(../img/gradient_2.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        justify-content: center;
+        padding: 2px;
+        min-height: 100vh;
+        margin: 0;
+        color: aliceblue;
+    }
 
-            .valor{
+    .divsub {
+        text-align: center;
+        align-content: center;
 
-width: 50px;
+    }  
 
-            }
+    .sub {
+        text-align: center;
+        align-items: center;
+        color: aliceblue;
+        margin-top: 0px;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+
+    
+    p {
+        text-align: center;
+        font-size: 14px;
+    }
+    
+    .form {
+        text-align: center;
+    }
+    
+    .tabela {
+        text-align: center;
+        align-content: center;
+    }
+    
+    .inputs {
+        border-radius: 3%;
+        width: 200px;
+        text-align: center;
+        font-size: 14px;
+        padding-top: 0;
+        padding-bottom: 5px;
+       
+       
+        }
+    
+    .resposta {
+    
+        color:chartreuse;
+            
+     }
+    
+    #button {
+        height: 30px;
+        color: red;
+                
+     }       
+    
+    img {
+        margin-top: 2%;
+        margin-bottom: 0;
+        width: 50px;
+        height: 50px;
+    }
+    
+               
+    
+    #enviar {
+        background-color: green;
+        color: white;
+        font-weight: bolder;
+        height: 30px;
+        border-radius: 15px;
+        margin-top: 5%;
+    }
+    
+    .valor{
+    
+    width: 50px;
+    
+    }
+
+}
