--- a/css/estilo.css
+++ b/css/estilo.css
@@ -183,3 +183,82 @@
     }
 
 }
+
+@media only screen and (min-width: 1200px) {
+    body {
+        background-color: rgb(4, 4, 150);
+        background-image: url(../img/gradient_2.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        justify-content: center;
+        padding: 2px;
+        min-height: 90vh;
+        margin: 0;
+        color: aliceblue;
+    }
+    
+    .sub {
+        text-align: center;
+        align-items: center;
+        color: aliceblue;
+        margin-top: 0px;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+    
+    .form {
+        text-align: center;
+    }
+    
+    .tabela {
+        text-align: center;
+        align-content: center;
+    }
+    
+    .inputs {
+        border-radius: 3%;
+        width: 200px;
+        text-align: center;
+        font-size: 14px;
+        padding-top: 0;
+        padding-bottom: 5px;
+       
+       
+        }
+    
+    .resposta {
+    
+        color:chartreuse;
+            
+     }
+    
+    #button {
+        height: 30px;
+        color: red;
+                
+     }       
+    
+    img {
+        margin-top: 2%;
+        margin-bottom: 0;
+        width: 50px;
+        height: 50px;
+    }
+    
+               
+    
+    #enviar {
+        background-color: green;
+        color: white;
+        font-weight: bolder;
+        height: 30px;
+        border-radius: 15px;
+        margin-top: 5%;
+    }
+    
+    .valor{
+    
+    width: 50px;
+    
+    }
+}
