--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -30,11 +30,11 @@ body {
 
   .logopaz {
     color: aliceblue;
-    margin: 3px;
+    margin-top: 5%;
     padding-left: 15px;
     padding-bottom: 0;
-    height: 15%;
-    width: 15%;
+    height: 10%;
+    width: 10%;
     align-content: center;
     }
 
@@ -50,11 +50,20 @@ body {
         border-radius: 15px;
         width: 80px;
         font-size: 15px;
-        padding: 10px 20px;
+        padding: 5px 10px;
         margin-top: 3px;
         
     }
 
     .buton:hover {
         background-color: green;
+    }
+    
+    .inputs {
+        text-align: center;
+    }
+
+    .respostas {
+        text-align: center;
+        width: 15 0px;
     }
