--- a/css/admin.css
+++ b/css/admin.css
@@ -56,6 +56,12 @@
         margin-bottom: 3px;
     }
 
+    .sessao {
+        align-content: center;
+        text-align: center;
+        margin-top: 10px;
+    }
+
   }
   
   
