--- a/css/admin.css
+++ b/css/admin.css
@@ -64,4 +64,22 @@
         margin-top: 10px;
     }
 
+    .botao {
+        display: inline-block;
+        background-color:darkcyan;
+        color: #fff;
+        border: none;
+        padding: 15px 25px;
+        font-size: 17px;
+        font-weight: bold;
+        text-decoration: none;
+        cursor: pointer;
+        border-radius: 15px;
+        width: 180px; /* largura do botão */
+        margin-top: 0;
+        margin-right: 20px;
+        margin-bottom: 4px;
+        
+        }
+
 }
