--- a/css/admin.css
+++ b/css/admin.css
@@ -20,7 +20,7 @@
     .titulo {
         text-align: center;
         font-size: 18px;
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .form {
@@ -34,13 +34,15 @@
     }
 
     .respostas {
+
         width: 180px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
         text-align: center;
         background-color: rgb(255, 255, 255);
         color: rgb(0, 0, 0);
         border-radius: 5px;
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
     }
 
     .botaoadmin {
@@ -62,15 +64,16 @@
     }
 
     .sessao {
-        align-content: center;
+        align-content: center;        
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         text-align: center;
         margin-top: 10px;
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-bottom: 10px;
     }
 
     .botao {
         display: inline-block;
-        background-color:darkcyan;
+        background-color: darkcyan;
         color: #fff;
         border: none;
         padding: 15px 25px;
@@ -79,29 +82,31 @@
         text-decoration: none;
         cursor: pointer;
         border-radius: 15px;
-        width: 130px; /* largura do botão */
+        width: 130px;
+        /* largura do botão */
         margin-top: 0;
         margin-right: 20px;
         margin-bottom: 4px;
-        
-        }
 
-        .botaoverm {
-            display: inline-block;
-            background-color:rgb(253, 0, 4);
-            color: #fff;
-            border: none;
-            padding: 15px 25px;
-            font-size: 17px;
-            font-weight: bold;
-            text-decoration: none;
-            cursor: pointer;
-            border-radius: 15px;
-            width: 130px; /* largura do botão */
-            margin-top: 0;
-            margin-right: 20px;
-            margin-bottom: 4px;
-            
-            }
+    }
+
+    .botaoverm {
+        display: inline-block;
+        background-color: rgb(253, 0, 4);
+        color: #fff;
+        border: none;
+        padding: 15px 25px;
+        font-size: 17px;
+        font-weight: bold;
+        text-decoration: none;
+        cursor: pointer;
+        border-radius: 15px;
+        width: 130px;
+        /* largura do botão */
+        margin-top: 0;
+        margin-right: 20px;
+        margin-bottom: 4px;
+
+    }
 
 }
