--- a/css/estilo.css
+++ b/css/estilo.css
@@ -237,7 +237,9 @@
         text-align: center;
         font-size: 14px;
         padding-top: 0;
-        padding-bottom: 5px;
+        padding-bottom: 3px;
+        align-content: center;
+        vertical-align:bottom;
        
        
         }
