--- a/css/admin.css
+++ b/css/admin.css
@@ -3,7 +3,7 @@
         background-color: rgb(0, 0, 180);
         background-image: url(../img/gradient_2.jpg);
         background-size: cover;
-        min-height:100vh;
+        min-height: 100vh;
         color: white;
         text-align: center;
         margin: 0;
@@ -125,30 +125,39 @@
     }
 }
 
-@media only screen and (min-width: 768px) and (max-device-width: 1200px) {
+@media only screen and (min-width: 769px) {
     body {
         background-color: rgb(0, 0, 180);
         background-image: url(../img/gradient_2.jpg);
         background-size: cover;
-        min-height:96vh;
-        align-content: center;
+        min-height: 100vh;
         color: white;
         text-align: center;
+        margin: 0;
+
     }
 
     .divi-img {
         text-align: center;
+        margin-top: 10%;
     }
 
+    .div-img {
+        text-align: center;
+        margin-top: 5%;
+    }
+
+
+
     .img {
-        width: 50px;
-        height: 50px;
+        width: 125px;
+        height: 125px;
     }
 
     .titulo {
         text-align: center;
-        font-size: 18px;
-        font-family:  sans-serif;
+        font-size: 20px;
+        font-family: sans-serif;
     }
 
     .form {
@@ -156,17 +165,21 @@
     }
 
     .inputs {
-        width: 100px;
-        font-size: 18px;
+        width: 120px;
+        font-size: 20px;
         text-align: right;
+        font-family: sans-serif;
+        align-content: center;
     }
 
     .respostas {
 
-        width: 180px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        width: 200px;
+        height: 22px;
+        font-family: sans-serif;
         font-size: 18px;
         text-align: center;
+        align-content: center;
         margin-bottom: 3px;
         background-color: rgb(255, 255, 255);
         color: rgb(0, 0, 0);
@@ -180,6 +193,7 @@
         color: #ffffff;
         border: none;
         padding: 10px 20px;
+        font-family: sans-serif;
         font-size: 15px;
         font-weight: bold;
         text-decoration: none;
@@ -187,7 +201,7 @@
         border-radius: 15px;
         width: 130px;
         /* largura do botão */
-        margin-top: 3px;
+        margin-top: 8px;
         margin-right: 0px;
         margin-bottom: 3px;
     }
@@ -206,6 +220,7 @@
         color: #fff;
         border: none;
         padding: 10px 15px;
+        font-family: sans-serif;
         font-size: 17px;
         font-weight: bold;
         text-decoration: none;
@@ -225,6 +240,7 @@
         color: #fff;
         border: none;
         padding: 15px 25px;
+        font-family: sans-serif;
         font-size: 17px;
         font-weight: bold;
         text-decoration: none;
@@ -247,19 +263,23 @@
     body {
         background-color: rgb(0, 0, 180);
         background-image: url(../img/gradient_2.jpg);
-        align-content: center;
+        align-content: cover;
+        min-height: 100vh;
         color: white;
         text-align: center;
+        margin: 0;
 
     }
 
     .divi-img {
         text-align: center;
+        margin-top: 10%;
     }
 
     .img {
         width: 100px;
         height: 100px;
+        margin-top: 10px;
     }
 
     .titulo {
@@ -279,7 +299,6 @@
     }
 
     .respostas {
-
         width: 180px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
@@ -288,7 +307,6 @@
         background-color: rgb(255, 255, 255);
         color: rgb(0, 0, 0);
         border-radius: 5px;
-
     }
 
     .botaoadmin {
