--- a/css/admin.css
+++ b/css/admin.css
@@ -123,6 +123,11 @@
     .divbotao {
         margin-top: 10px;
     }
+    .erro{
+        text-align: center;
+        margin-top: 10%;
+        font-size: 20px;
+    }
 }
 
 @media only screen and (min-width: 769px) {
@@ -257,6 +262,11 @@
     .divbotao {
         margin-top: 10px;
     }
+    .erro{
+        text-align: center;
+        margin-top: 10%;
+        font-size: 20px;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -375,6 +385,12 @@
 
     .divbotao {
         margin-top: 10px;
+    }
+
+    .erro{
+        text-align: center;
+        margin-top: 10%;
+        font-size: 20px;
     }
 
 }
