--- a/cnc/convert.css
+++ b/cnc/convert.css
@@ -6,7 +6,7 @@ body {
     background-size: cover;
     justify-content: center;
     padding: 2%;
-    min-height:98vh;
+    min-height:100vh;
     margin: 0;
     color: aliceblue;    
 }
@@ -34,10 +34,10 @@ body {
 }
 
 .imglg {
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
     margin-bottom: 0;
-    margin-top: 10%;
+    margin-top: 3%;
 }
 
 .img {
@@ -45,11 +45,10 @@ body {
     margin-bottom: 0;
 }
 
-.tabela {
-    margin-right: 0;
-    margin-left: 0;
-   
-}
 
+
+.form {
+    text-align: center;
+}
 
 }
