--- a/css/estilo.css
+++ b/css/estilo.css
@@ -42,6 +42,8 @@
     p {
         text-align: center;
         font-size: 14px;
+        margin-top: 2px;
+        margin-bottom: 2px;
     }
 
     .inputs {
@@ -105,14 +107,14 @@
         background-repeat: no-repeat;
         background-size: cover;
         justify-content: center;
-        padding: 2px;
+        padding: 0;
         min-height: 100vh;
         margin: 0;
         color: aliceblue;
     }
 
     .logo {
-        margin-top: 3%;
+        margin-top: 0;
         margin-bottom: 0;
         width: 10%;
         height: 10%;
@@ -140,6 +142,8 @@
     p {
         text-align: center;
         font-size: 14px;
+        margin-top: 2px;
+        margin-bottom: 2px;
     }
     
     .form {
@@ -156,8 +160,8 @@
         width: 200px;
         text-align: center;
         font-size: 14px;
-        padding-top: 0;
-        padding-bottom: 5px;
+        padding-top: 5px;
+        padding-bottom: 0;
        
        
         }
@@ -213,19 +217,19 @@
         background-repeat: no-repeat;
         background-size: cover;
         justify-content: center;
-        padding: 2px;
+        padding: 0;
         min-height: 100vh;
         margin: 0;
         color: aliceblue;
     }
 
     .logo {
-        margin-top: 5px;
+        margin-top: 0px;
         margin-bottom: 0;
         width: 10%;
         height: 10%;
         align-content: center;
-        padding: 3%;
+        padding: 10px;
        }
 
        .divsub {
