--- a/css/medias.css
+++ b/css/medias.css
@@ -11,7 +11,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     justify-content: center;
-    padding: 2%;
+    padding: 0;
     min-height:98vh;
     margin: 0;
     color: aliceblue;    
@@ -147,9 +147,9 @@ vertical-align: middle; /* alinhamento vertical da imagem */
     background-repeat: no-repeat;
     background-size: cover;
     justify-content: center;
-    padding: 2%;
+    padding: 0;
     min-height: 88vh;
-    margin: 0;
+    margin-top: 10px;
     color: aliceblue;    
 }
 
